--- a/docs/tutorials/notebooks/map_vehicles_cowc.ipynb
+++ b/docs/tutorials/notebooks/map_vehicles_cowc.ipynb
@@ -23,7 +23,7 @@
     "import solaris as sol\n",
     "import os\n",
     "import glob\n",
-    "import gdal\n",
+    "from osgeo import gdal\n",
     "from tqdm import tqdm\n",
     "import cv2\n",
     "import shutil\n",
