Removed tensorflow dependency and updated to appending to work with pandas > 2.0

--- a/docs/tutorials/notebooks/api_training_custom.ipynb
+++ b/docs/tutorials/notebooks/api_training_custom.ipynb
@@ -24,9 +24,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tensorflow.keras.layers import Input, Conv2D, MaxPooling2D, Conv2DTranspose\n",
-    "from tensorflow.keras.layers import concatenate, BatchNormalization, Dropout\n",
-    "from tensorflow.keras import Model\n",
+    "#from tensorflow.keras.layers import Input, Conv2D, MaxPooling2D, Conv2DTranspose\n",
+    "#from tensorflow.keras.layers import concatenate, BatchNormalization, Dropout\n",
+    "#from tensorflow.keras import Model\n",
     "\n",
     "def cosmiq_sn4_baseline(input_shape=(512, 512, 3), base_depth=64):\n",
     "    \"\"\"Keras implementation of untrained TernausNet model architecture.\n",
